<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/act_data_input_title"></TextView>
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/name_prompt"/>
	<EditText android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/EditTextName"
		android:inputType="textPersonName" />
	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/DOB_prompt" />
	<DatePicker android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/DatePickerDOB"
		android:soundEffectsEnabled="false" />
	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/email_prompt"></TextView>
	<EditText android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/EditTextEmail"
		android:inputType="textEmailAddress" />
	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/ButtonNext"
		android:text="@string/next_command_label" android:clickable="true"/>
</LinearLayout>
